# sloppyroad

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  package.json  pyproject.toml  setup-env.sh  tailwind.config.js
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 2026_03_11_651e2b594027_initial_schema.py  2026_03_14_8fcaebd46945_add_chapter_images_and_novel_seeds_.py  2026_03_15_add_character_identity_fields.py  2026_03_15_add_multi_tenant_tables.py  2026_03_15_add_pgvector_table.py  2026_03_16_add_art_queue_feedback.py  2026_03_19_7b9f02898f41_add_default_image_generation_enabled_to_.py  2026_03_19_switch_vec_index_to_hnsw.py
docker/: init-pgvector.sql
scripts/: e2e_test.py
src/aiwebnovel/: __init__.py  config.py  logging.py  main.py  settings_resolver.py
src/aiwebnovel/auth/: __init__.py  (+8 more)
tests/: conftest.py  test_analyzer.py  test_auth.py  test_budget.py  test_chekhov.py  test_config.py  test_context.py  test_e2e_integration.py  test_e2e_pipeline.py  test_genre_config.py  test_image_budget.py  test_image_evolution.py  test_image_failure_surfacing.py  test_image_pipeline.py  test_image_prompts.py  test_image_provider.py  test_knowledge.py  test_models.py  test_parsers.py  test_pipeline.py  test_planner.py  test_prompts.py  test_provider.py  test_queries.py  test_routes.py  test_routes_pages.py  test_scene_markers.py  test_schemas.py  test_security.py  test_seeds.py  test_semantic.py  test_story_bible.py  test_summarization.py  test_tags.py  test_tasks.py  test_validator.py  test_vector.py  test_worker.py  test_worker_health.py
(+138 files in other folders)
