[project]
name = "aiwebnovel"
version = "0.1.0"
description = "AI-powered web novel generator specializing in progression fantasy"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "starlette>=0.40.0,<1.0.0",
    "uvicorn[standard]>=0.34.0",
    "gunicorn>=23.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "litellm==1.82.6",
    "pydantic[email]>=2.0",
    "pydantic-settings>=2.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.18",
    "redis>=5.0.0",
    "arq>=0.26.0",
    "httpx>=0.28.0",
    "sse-starlette>=2.0.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "stripe>=11.0.0",
    "tiktoken>=0.8.0",
    "structlog>=24.0.0",
    "sqlite-vec>=0.1.0",
    "pgvector>=0.3.0",
    "numpy>=1.26.0",
    "gradio-client>=1.5.0",
    "resend>=0.10.0",
    "sentry-sdk[fastapi]>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/aiwebnovel"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
